--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,17 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
 
 body {
-  background: rgb(224, 250, 250);
+  background: rgb(18, 18, 18);
 }
 
 .game-container {
@@ -18,7 +23,8 @@ body {
   width: 60vh;
   margin: 0;
   border-radius: 5vh;
-  background-color: rgb(88, 200, 228);
+  background-color: rgb(40, 40, 40);
+  box-shadow: 0px 0px 15px 5px #df00fe, 0 0 5px 5px #0ff;
 }
 
 .game-container .status-message {
@@ -28,9 +34,10 @@ body {
   text-align: center;
   font-size: 150%;
   font-weight: 600;
-  color: rgb(62, 158, 182);
+  color: white;
+  text-shadow: 0px 0px 15px white;
   border-radius: 2vh;
-  background-color: rgb(178, 243, 252);
+  background-color: rgb(18, 18, 18);
 }
 
 .game-board section span {
@@ -38,12 +45,14 @@ body {
   margin: 1.5vh 2vh 2vh 2.3vh;
   width: 15.5vh;
   height: 15.5vh;
-  background: rgb(178, 243, 252);
+  background: rgb(18, 18, 18);
   border-radius: 1vh;
   display: relative;
   font-size: 11vh;
   text-align: center;
-  color: rgb(53, 162, 189);
+  color: white;
+  text-shadow: 0px 0px 15px white;
+
   line-height: 16vh;
   cursor: default;
   user-select: none;
@@ -67,11 +76,6 @@ body {
   display: flex;
 }
 
-.turns .current {
-  background-color: rgb(53, 162, 189);
-  color: rgb(178, 243, 252);
-}
-
 .options button,
 .turns button,
 .game-end button {
@@ -80,11 +84,12 @@ body {
   font-size: 150%;
   font-weight: 600;
   padding: 1vh;
-  color: rgb(53, 162, 189);
+  color: white;
+  text-shadow: 0px 0px 15px white;
   border: none;
   outline: none;
   border-radius: 1vh;
-  background-color: rgb(178, 243, 252);
+  background-color: rgb(18, 18, 18);
   cursor: pointer;
   transition: all 0.3s ease;
 }
@@ -107,8 +112,12 @@ body {
 }
 
 .options button:hover,
-.game-end button:hover {
-  transform: scale(0.96);
+.game-end button:hover,
+.turns .current {
+  color: white;
+  background: #df00fe;
+  box-shadow: 0 0 10px #df00fe, 0 0 40px #df00fe, 0 0 80px #df00fe;
+  transform: scale(1.04);
 }
 
 .options button.playerX {
